removed padding from nav window and added margin to h1 tag to remove bug with white space at bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,10 +73,13 @@ button:focus {
     background-color: #FAF3D1;
     border-radius: 10px;
     margin: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
     box-shadow: 1px 1px 1px black;
     position: relative;
+}
+
+.nav-window-h1 {
+    margin-top: 20px;
+    text-align: center;
 }
 
 .window-item {
